force-app/main/default/objects/AssignedResource/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <formula>ServiceAppointment.Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Code</label>
    <type>Text</type>
</CustomField>