force-app/main/default/objects/AssignedResource/fields/Resource_Email__c.field-meta.xml
<CustomField>
    <fullName>Resource_Email__c</fullName>
    <formula>ServiceResource.RelatedRecord.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Email</label>
    <type>Text</type>
</CustomField>