force-app/main/default/objects/AssignedResource/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <description>Set to the Service Resource. Used for email</description>
    <formula>ServiceResource.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to the Service Resource. Used for email</inlineHelpText>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>