force-app/main/default/objects/AssignedResource/fields/Resource_Phone__c.field-meta.xml
<CustomField>
    <fullName>Resource_Phone__c</fullName>
    <formula>ServiceResource.RelatedRecord.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Phone</label>
    <type>Text</type>
</CustomField>