force-app/main/default/objects/AssignedResource/fields/Service_Appointment_Actual_End__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Actual_End__c</fullName>
    <description>Set to the Actual End from the Service Appointment</description>
    <formula>ServiceAppointment.ActualEndTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to the Actual End from the Service Appointment</inlineHelpText>
    <label>Service Appointment Actual End</label>
    <type>DateTime</type>
</CustomField>