force-app/main/default/objects/AssignedResource/fields/Service_Appointment_Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Actual_Start__c</fullName>
    <description>Set to the Actual Start from the Service Appointment</description>
    <formula>ServiceAppointment.ActualStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to the Actual Start from the Service Appointment</inlineHelpText>
    <label>Service Appointment Actual Start</label>
    <type>DateTime</type>
</CustomField>