force-app/main/default/objects/AssignedResource/fields/Service_Appointment_Duration__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Duration__c</fullName>
    <description>Set to the Duration of the Service Appointment</description>
    <formula>ServiceAppointment.Duration</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to the Duration of the Service Appointment</inlineHelpText>
    <label>Service Appointment Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>