force-app/main/default/objects/AssignedResource/fields/Service_Appointment_Product__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Product__c</fullName>
    <description>Set to the Product from the Service Appointment</description>
    <formula>ServiceAppointment.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to the Product from the Service Appointment</inlineHelpText>
    <label>Service Appointment Product</label>
    <type>Text</type>
</CustomField>