force-app/main/default/objects/AssignedResource/fields/Service_Appointment_Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Scheduled_End__c</fullName>
    <description>Set to the Scheduled End from the Service Appointment</description>
    <formula>ServiceAppointment.SchedEndTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to the Scheduled End from the Service Appointment</inlineHelpText>
    <label>Service Appointment Scheduled End</label>
    <type>DateTime</type>
</CustomField>