force-app/main/default/objects/AssignedResource/fields/Service_Appointment_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Scheduled_Start__c</fullName>
    <description>Set to the Scheduled Start from the Service Appointment</description>
    <formula>ServiceAppointment.SchedStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to the Scheduled Start from the Service Appointment</inlineHelpText>
    <label>Service Appointment Scheduled Start</label>
    <type>DateTime</type>
</CustomField>