force-app/main/default/objects/AssignedResource/fields/Service_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Type__c</fullName>
    <description>Set to the IH3POS of the Service Appointment</description>
    <formula>TEXT(ServiceAppointment.IH3POS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to the IH3POS of the Service Appointment</inlineHelpText>
    <label>Service Appointment Type</label>
    <type>Text</type>
</CustomField>