force-app/main/default/objects/AssignedResource/fields/Shadow_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Shadow_Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether the assigned resource is shadowing the course.</description>
    <inlineHelpText>Indicates whether the assigned resource is shadowing the course.</inlineHelpText>
    <label>Shadow Trainer</label>
    <type>Checkbox</type>
</CustomField>